<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Mattias Nilsson
  
  This file is part of NoteBucket.
 
   NoteBucket is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   NoteBucket is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
   along with NoteBucket.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>

    <string name="hello">Hello World, NoteBucket!</string>
    <string name="app_name">Note Bucket</string>
    <string name="border_description">Border between lists</string>
    <string name="tag_delete_question">Delete %1$s?</string>
    <string name="note_delete_question">Delete note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="create_note_hint">Note</string>
    <string name="create_note_title">Create Note</string>
    <string name="create_tag_hint">Tag name</string>
    <string name="create_tag_title">Create Tag</string>
    <string name="create_new">Create new&#8230;</string>
    <string name="connect_to_notes">Connect to notes</string>
    
    <string name="create_tag_tag">NoteBucket_CreateTag</string>
    <string name="create_note_tag">NoteBucket_CreateNote</string>

    <string name="db_error">Database Error</string>
</resources>