<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/create_note_title" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="createNote"
            android:text="@string/done" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="cancelNote"
            android:text="@string/cancel" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/create_note_input"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:singleLine="false"
        android:hint="@string/create_note_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>
	
</LinearLayout>