<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Mattias Nilsson
  
  This file is part of NoteBucket.
 
   NoteBucket is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   NoteBucket is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
   along with NoteBucket.  If not, see <http://www.gnu.org/licenses/>.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/create_tag_title" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="createTag"
            android:text="@string/done" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="cancelTag"
            android:text="@string/cancel" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/create_tag_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_tag_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>
	
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/connect_to_notes" />
    
    <ListView
        android:id="@+id/noteList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_weight="0.4"
        android:choiceMode="multipleChoice"
        android:background="@color/list_bg"
        android:cacheColorHint="@color/list_bg" >

    </ListView>
</LinearLayout>